# Document-Extraction-Service

./: .env.example  .gitignore  .repomixignore  Makefile  README.md  pyproject.toml  repomix.config.json  プロジェクト全体のコード.xml
notebooks/: 01_テキスト抽出テスト.ipynb
src/: main.py
src/api/: extract_router.py
src/api/cleaners/: patent_cleaner.py  text_cleaner.py
src/api/extractors/: docx_extractor.py  image_extractor.py  pdf_extractor.py  pptx_extractor.py  text_extractor.py  xlsx_extractor.py
src/api/mode/deep/: deep_router.py
src/api/mode/deep/services/: deep_service.py
src/api/mode/deep/utils/: markdown_cleaner.py
src/api/mode/vision/: vision_router.py
src/api/mode/vision/services/: vision_service.py
src/api/schemas/: extract_schema.py
src/api/services/: extract_service.py
src/api/shared_modules/schemas/: extract_schema.py
src/api/utils/: security.py
src/core/: config.py  model_state.py
